// Desafio CNAB - bycoders_
// Diagrama de Banco de Dados
// Colar em https://dbdiagram.io para visualizar
//
// Arquitetura: 3 bancos PostgreSQL separados por microsserviço
// - cnab_users  → user-service (Django)
// - cnab_uploads → upload-service (FastAPI/Alembic)
// - cnab_data   → cnab-service (FastAPI/Alembic)

Project cnab_parser {
  database_type: 'PostgreSQL'
  Note: 'Sistema de importação e visualização de transações CNAB'
}

// ============================================
// cnab_users (user-service — Django)
// ============================================

Table auth_user {
  id serial [pk, increment]
  username varchar(150) [unique, not null, note: 'Nome de usuário']
  email varchar(254) [unique, not null, note: 'E-mail do usuário']
  password varchar(128) [not null, note: 'Hash da senha (PBKDF2)']
  first_name varchar(150) [note: 'Nome']
  last_name varchar(150) [note: 'Sobrenome']
  is_active boolean [default: true, note: 'Usuário ativo']
  is_staff boolean [default: false, note: 'Acesso ao admin']
  is_superuser boolean [default: false, note: 'Superusuário']
  created_at timestamptz [not null, default: `now()`, note: 'Data de criação']
  updated_at timestamptz [not null, default: `now()`, note: 'Data de atualização']

  Note: 'Banco: cnab_users. Gerenciado pelo user-service (Django migrations).'
}

// ============================================
// cnab_uploads (upload-service — FastAPI/Alembic)
// ============================================

Table cnab_upload_history {
  id uuid [pk, note: 'UUID gerado automaticamente']
  user_id integer [note: 'ID do usuário (referência cruzada ao user-service)']
  original_filename varchar(255) [not null, note: 'Nome original do arquivo']
  total_transactions integer [not null, default: 0, note: 'Quantidade de transações importadas']
  status varchar(20) [not null, default: 'pending', note: 'pending | processing | completed | failed']
  error_message text [note: 'Mensagem de erro (se falhou)']
  is_active boolean [not null, default: true, note: 'Controle de soft delete']
  created_at timestamptz [not null, default: `now()`, note: 'Data do upload']
  updated_at timestamptz [not null, default: `now()`, note: 'Data de atualização']
  inactivated_at timestamptz [note: 'Data de inativação']

  Note: 'Banco: cnab_uploads. Gerenciado pelo upload-service (Alembic). Herda BaseModel (UUID + soft delete).'

  indexes {
    status [name: 'idx_upload_status']
    created_at [name: 'idx_upload_created']
  }
}

// ============================================
// cnab_data (cnab-service — FastAPI/Alembic)
// ============================================

Table cnab_transaction_type {
  id uuid [pk, note: 'UUID gerado automaticamente']
  code smallint [unique, not null, note: 'Código do tipo (1-9)']
  description varchar(50) [not null, note: 'Descrição do tipo']
  nature varchar(10) [not null, note: 'entrada ou saída']
  sign char(1) [not null, note: '+ ou -']
  is_active boolean [not null, default: true, note: 'Controle de soft delete']
  created_at timestamptz [not null, default: `now()`, note: 'Data de criação']
  updated_at timestamptz [not null, default: `now()`, note: 'Data de atualização']
  inactivated_at timestamptz [note: 'Data de inativação']

  Note: 'Banco: cnab_data. Tabela de referência (seed com 9 tipos fixos). Herda BaseModel.'

  indexes {
    code [unique, name: 'uq_transaction_type_code']
  }
}

Table cnab_store {
  id uuid [pk, note: 'UUID gerado automaticamente']
  name varchar(50) [not null, note: 'Nome da loja (do arquivo CNAB)']
  owner_name varchar(50) [not null, note: 'Nome do representante/dono']
  owner_cpf varchar(11) [not null, note: 'CPF do beneficiário']
  is_active boolean [not null, default: true, note: 'Controle de soft delete']
  created_at timestamptz [not null, default: `now()`, note: 'Data de criação']
  updated_at timestamptz [not null, default: `now()`, note: 'Data de atualização']
  inactivated_at timestamptz [note: 'Data de inativação']

  Note: 'Banco: cnab_data. Lojas extraídas dos arquivos CNAB. Herda BaseModel.'

  indexes {
    (name, owner_cpf) [unique, name: 'uq_store_name_cpf']
    name [name: 'idx_store_name']
  }
}

Table cnab_transaction {
  id uuid [pk, note: 'UUID gerado automaticamente']
  transaction_type_id uuid [ref: > cnab_transaction_type.id, not null, note: 'Tipo da transação']
  store_id uuid [ref: > cnab_store.id, not null, note: 'Loja vinculada']
  upload_id uuid [not null, note: 'ID do upload (referência cruzada ao upload-service)']
  amount decimal(10,2) [not null, note: 'Valor normalizado (original / 100)']
  card varchar(20) [not null, note: 'Cartão mascarado (ex: 4753****3153)']
  occurred_at date [not null, note: 'Data da ocorrência']
  occurred_time time [not null, note: 'Hora da ocorrência (UTC-3)']
  is_active boolean [not null, default: true, note: 'Controle de soft delete']
  created_at timestamptz [not null, default: `now()`, note: 'Data de inserção']
  updated_at timestamptz [not null, default: `now()`, note: 'Data de atualização']
  inactivated_at timestamptz [note: 'Data de inativação']

  Note: 'Banco: cnab_data. Transações CNAB. upload_id é referência cruzada (não FK real). Herda BaseModel.'

  indexes {
    (store_id, occurred_at) [name: 'idx_transaction_store_date']
    transaction_type_id [name: 'idx_transaction_type']
    upload_id [name: 'idx_transaction_upload']
    occurred_at [name: 'idx_transaction_date']
  }
}

// ============================================
// Relacionamentos
// ============================================

// Dentro do banco cnab_data:
// cnab_store 1---* cnab_transaction
// cnab_transaction_type 1---* cnab_transaction

// Referências cruzadas entre bancos (sem FK real):
// auth_user.id ←--→ cnab_upload_history.user_id
// cnab_upload_history.id ←--→ cnab_transaction.upload_id
